--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,32 +17,12 @@ bind -Tcopy-mode WheelDownPane send -N1 -X scroll-down
 set -g base-index 1
 set -g pane-base-index 1
 
-# Display window name (needed with catppuccin)
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_text "#W"
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 
-# auto save every 15 minutes
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '15'
-
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-# Make the status line pretty and add some modules
-set -g status-right-length 100
-set -g status-left-length 100
-#set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -g status-right 'CPU: #{cpu_percentage} RAM: #{ram_percentage}'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.config/tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm
