--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,10 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g prefix C-s
+set -g prefix2 C-b
 set -g mouse on
+
+setw -g mode-keys vi
 
 bind-key h select-pane -L
 bind-key j select-pane -D
